force-app/main/default/objects/NewActivity__c/NewActivity__c.object-meta.xml
<CustomObject>
    <label>NewActivity</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewActivities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>