force-app/main/default/objects/NewActivity__c/fields/Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Date__c</fullName>
    <label>Campaign Date</label>
    <type>Date</type>
</CustomField>