force-app/main/default/objects/NewActivity__c/fields/Contact_Email_Status_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Status_Cleanup__c</fullName>
    <formula>Text(Contact__r.Email_Status_Cleanup__c)</formula>
    <label>Contact Email Status Cleanup</label>
    <type>Text</type>
</CustomField>