force-app/main/default/objects/NewActivity__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>Text( Contact__r.Gender__c )</formula>
    <label>Gender</label>
    <type>Text</type>
</CustomField>