force-app/main/default/objects/NewActivity__c/fields/LinkedIn_Activity__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Activity__c</fullName>
    <formula>Text(Contact__r.Linkedin_Activity__c)</formula>
    <label>LinkedIn Activity</label>
    <type>Text</type>
</CustomField>