force-app/main/default/objects/NewActivity__c/fields/LinkedIn_Url__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Url__c</fullName>
    <formula>Contact__r.LinkedIN__c</formula>
    <label>LinkedIn Url</label>
    <type>Text</type>
</CustomField>