force-app/main/default/objects/NewActivity__c/fields/Unsubscribed_Date__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_Date__c</fullName>
    <label>Unsubscribed Date</label>
    <type>Date</type>
</CustomField>