force-app/main/default/objects/NewActivity__c/fields/Unsubscribed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_Reason__c</fullName>
    <label>Unsubscribed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>