force-app/main/default/objects/NewActivity__c/listViews/Campaign_Lists.listView-meta.xml
<ListView>
    <fullName>Campaign_Lists</fullName>
    <columns>Campaign_Date__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Industry__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Open__c</columns>
    <columns>Total_Click__c</columns>
    <columns>Unsubscribed__c</columns>
    <columns>Unsubscribed_Reason__c</columns>
    <columns>Unsubscribed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Campaign Lists</label>
</ListView>